FIx flexbox alignment

--- a/src/components/homepage_styles.css
+++ b/src/components/homepage_styles.css
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     flex-wrap: wrap;
     gap: 10%;
 }
